recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:10: error: ')' expected but double literal found.
	pentaKoch(levels-1, (length/3*)0.4)
                                       ^PentaKoch:12: error: ';' expected but double literal found.
	pentaKoch(levels-1, (length/3*)0.4)
                                       ^